# renpy-translation-lab

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api_keys.example.json  atomic_io.py  batch_cost_estimate.py  batch_non_chinese_rules.py  batch_submit_recovery.py  benchmark_rag_store.py  design-qa.md  doctor_recommendations.py  extract_relations.py  final_review.py  final_review_llm.py  fix_preserve_terms.py  game_ingest.py  games_registry.example.json  games_registry.py  gemini_model_catalog.py  gemini_translate.py  gemini_translate_batch.py  glossary.example.json  import_manual_translations.py  keyword_glossary_merge.py  litellm_provider_config.py  litellm_sync_backend.py  macro_setting.example.md  optional_feature.py  project_analysis.py  project_analysis_generate.py  project_analysis_llm.py  project_analysis_routes.py  project_asset_paths.py  project_context_settings.py  (+20 more)
docs/: README.md  batch_workflows.md  ci.md  context_systems.md  dependencies.md  doctor_recommendations.md  doctor_states_matrix.md  games_registry.md  gui_ia_redesign.md  gui_workbench.md  project_notes.md  quickstart_agent.md  quickstart_gui.md  relation_analysis.md  roadmap.md  setup.md  story_graph.example.json  story_graph.schema.json  translation_workflow_audit.md
gui_qt/: __init__.py  __main__.py  ab_experiment_report.py  api_key_dialog.py  api_key_helpers.py  app.py  apply_failure_dialog.py  apply_failure_report.py  batch_workflow_support.py  bootstrap_report.py  check_failures_report.py  check_issues_dialog.py  check_report.py  cli_runner.py  diagnostics_context.py  doctor_report.py  doctor_worker.py  duration_format.py  empty_state.py  font_helpers.py  font_worker.py  game_ingest_dialog.py  (+59 more)
(+219 files in other folders)
